--- a/sass/style.scss
+++ b/sass/style.scss
@@ -71,7 +71,7 @@
 	/* Basic */
 
 	body {
-		background: _palette(bg);
+		background: _palette(fg);
 
 		&.is-loading {
 			*, *:before, *:after {
@@ -1314,7 +1314,7 @@
 	#page-wrapper {
 		@include vendor('transition', 'opacity #{_duration(menu)} ease');
 		opacity: 1;
-		padding-top: 0;
+		padding-top: 2em;
 
 		&:before {
 			background: rgba(0,0,0,0);
@@ -1444,6 +1444,16 @@
 				@include breakpoint(small) {
 					font-size: 0.8em;
 				}
+								&:before {
+						background-image: url('images/logo.png');
+						background-position: center center;
+						background-repeat: no-repeat;
+						content: '';
+						display: inline-block;
+						height: 2em;
+						vertical-align: top;
+						width: 2em;
+					}
 			}
 		}
 
