--- a/css/style.css
+++ b/css/style.css
@@ -3541,13 +3541,13 @@ body.is-menu-visible #menu {
 }
 /* line 1447, ../sass/style.scss */
 #header h1 a:before {
-  background-image: url("images/logo.png");
+  background-image: url("images/logo.svg");
   background-position: center center;
   background-repeat: no-repeat;
   content: '';
   display: inline-block;
   height: 2em;
-  vertical-align: top;
+  vertical-align: center;
   width: 2em;
 }
 /* line 1460, ../sass/style.scss */
