--- a/sass/style.scss
+++ b/sass/style.scss
@@ -88,18 +88,18 @@
 		font-weight: _font(weight);
 		letter-spacing: _size(letter-spacing);
 		line-height: 1.65em;
-		-webkit-font-smoothing:antialiased;
-		-moz-osx-font-smoothing:grayscale;
+		// -webkit-font-smoothing:antialiased;
+		// -moz-osx-font-smoothing:grayscale;
 		@include breakpoint(xlarge) {
-			font-size: 14pt;
-		}
-
-		@include breakpoint(large) {
 			font-size: 13pt;
 		}
 
-		@include breakpoint(small) {
+		@include breakpoint(large) {
 			font-size: 12pt;
+		}
+
+		@include breakpoint(small) {
+			font-size: 11pt;
 			letter-spacing: _size(letter-spacing) * 0.5;
 		}
 	}
@@ -126,95 +126,94 @@
 
 	p {
 		font-family: georgia, times, 'times new roman', serif;
-  		font-style: italic;
-		margin: 0 0 _size(element-margin) 0;
-	}
+  		// font-style: italic;
+  		margin: 0 0 _size(element-margin) 0;
+  	}
 
-	h1, h2, h3, h4, h5, h6 {
-		color: _palette(fg-bold);
-		font-weight: _font(weight-extrabold);
-		letter-spacing: _size(letter-spacing-alt);
-		line-height: 1em;
-		margin: 0 0 (_size(element-margin) * 0.5) 0;
-		text-transform: uppercase;
+  	h1, h2, h3, h4, h5, h6 {
+  		color: _palette(fg-bold);
+  		font-weight: _font(weight-extrabold);
+  		letter-spacing: _size(letter-spacing-alt);
+  		line-height: 1em;
+  		margin: 0 0 (_size(element-margin) * 0.5) 0;
+  		text-transform: uppercase;
 
-		a {
-			color: inherit;
-			text-decoration: none;
-		}
-	}
+  		a {
+  			color: inherit;
+  			text-decoration: none;
+  		}
+  	}
 
-	h2 {
-		font-size: 1.35em;
-		line-height: 1.75em;
+  	h2 {
+  		font-size: 1.35em;
+  		line-height: 1.75em;
 
-		@include breakpoint(small) {
-			font-size: 1.1em;
-			line-height: 1.65em;
-		}
-	}
+  		@include breakpoint(small) {
+  			font-size: 1.1em;
+  			line-height: 1.65em;
+  		}
+  	}
 
-	h3 {
-		font-size: 1.15em;
-		line-height: 1.75em;
+  	h3 {
+  		font-size: 1.15em;
+  		line-height: 1.75em;
 
-		@include breakpoint(small) {
-			font-size: 1em;
-			line-height: 1.65em;
-		}
-	}
+  		@include breakpoint(small) {
+  			font-size: 1em;
+  			line-height: 1.65em;
+  		}
+  	}
 
-	h4 {
-		font-size: 1em;
-		line-height: 1.5em;
-	}
+  	h4 {
+  		font-size: 1em;
+  		line-height: 1.5em;
+  	}
 
-	h5 {
-		font-size: 0.8em;
-		line-height: 1.5em;
-	}
+  	h5 {
+  		font-size: 0.8em;
+  		line-height: 1.5em;
+  	}
 
-	h6 {
-		font-size: 0.7em;
-		line-height: 1.5em;
-	}
+  	h6 {
+  		font-size: 0.7em;
+  		line-height: 1.5em;
+  	}
 
-	sub {
-		font-size: 0.8em;
-		position: relative;
-		top: 0.5em;
-	}
+  	sub {
+  		font-size: 0.8em;
+  		position: relative;
+  		top: 0.5em;
+  	}
 
-	sup {
-		font-size: 0.8em;
-		position: relative;
-		top: -0.5em;
-	}
+  	sup {
+  		font-size: 0.8em;
+  		position: relative;
+  		top: -0.5em;
+  	}
 
-	hr {
-		border: 0;
-		border-bottom: solid 2px _palette(border);
-		margin: (_size(element-margin) * 1.5) 0;
+  	hr {
+  		border: 0;
+  		border-bottom: solid 2px _palette(border);
+  		margin: (_size(element-margin) * 1.5) 0;
 
-		&.major {
-			margin: (_size(element-margin) * 2.25) 0;
-		}
-	}
-
-	blockquote .big{
-		font-size: 2em;
-		border-left: solid 4px _palette(border);
-		line-height: 1em;
-		font-style: italic;
-		margin: 0 0 _size(element-margin) 0;
-		// padding: 0.1em 0 0.1em 2em;
-	}
+  		&.major {
+  			margin: (_size(element-margin) * 2.25) 0;
+  		}
+  	}
 
 	blockquote {
 		border-left: solid 4px _palette(border);
 		font-style: italic;
 		margin: 0 0 _size(element-margin) 0;
 		padding: 0.5em 0 0.5em 2em;
+	}
+	  	blockquote .big{
+  		font-size: 2em;
+  		border-left: solid 4px _palette(border);
+  		line-height: 1em;
+  		font-style: italic;
+  		margin: 0 0 _size(element-margin) 0;
+		// padding: 0.1em 0 0.1em 2em;
 	}
 
 	code {
@@ -285,7 +284,8 @@
 			margin: 0 0 (_size(element-margin) * 1.75) 0;
 
 			h2, h3, h4, h5, h6 {
-				border-bottom: solid 2px _palette(border);
+				// font-family: _font(family-semibold);
+				border-bottom: solid 1px _palette(border);
 				display: inline-block;
 				padding-bottom: 1em;
 				position: relative;
@@ -513,8 +513,7 @@
 
 		&.major {
 			@include vendor('transform', 'rotate(-45deg)');
-			border-radius: 3px;
-			border: solid 2px _palette(border);
+			border: solid 2px _palette(bg);
 			display: inline-block;
 			font-size: 1.35em;
 			height: calc(3em + 2px);
@@ -853,7 +852,7 @@
 		@include vendor('appearance', 'none');
 		@include vendor('transition', ('background-color #{_duration(transitions)} ease-in-out', 'color #{_duration(transitions)} ease-in-out'));
 		background-color: transparent;
-		border-radius: 3px;
+		border-radius: 0px;
 		border: 0;
 		box-shadow: inset 0 0 0 2px _palette(border);
 		color: _palette(fg-bold);
@@ -1419,9 +1418,9 @@
 	#header {
 		@include vendor('transition', 'background-color #{_duration(transitions)} ease');
 		background: _palette(fg);
-		height: 2em;
+		height: 3em;
 		left: 0;
-		line-height: 2em;
+		line-height: 3em;
 		position: fixed;
 		top: 0;
 		width: 100%;
@@ -1452,9 +1451,9 @@
 					background-repeat: no-repeat;
 					content: '';
 					display: inline-block;
-					height: 2em;
+					height: 3em;
 					vertical-align: center;
-					width: 2em;
+					width: 3em;
 				}
 			}
 		}
@@ -1491,13 +1490,13 @@
 
 							&:after {
 								background-image: url('images/bars.svg');
-								background-position: center right;
+								background-position: center center;
 								background-repeat: no-repeat;
 								content: '';
 								display: inline-block;
-								height: 2em;
-								vertical-align: top;
-								width: 2em;
+								height: 3em;
+								vertical-align: center;
+								width: 3em;
 							}
 
 							@include breakpoint(small) {
@@ -1542,25 +1541,29 @@
 								&:after {
 									background-image: url('images/bars-alt.svg');
 								}
-								}}}}}
 							}
 						}
+					}
+				}
+			}
+		}
+	}
 
-						/* Banner */
+	/* Banner */
 
-						#banner {
-							@include vendor('display', 'flex');
-							@include vendor('flex-direction', 'column');
-							@include vendor('justify-content', 'center');
-							cursor: default;
-							height: 100vh;
-							min-height: 35em;
-							overflow: hidden;
-							position: relative;
-							text-align: center;
+	#banner {
+		@include vendor('display', 'flex');
+		@include vendor('flex-direction', 'column');
+		@include vendor('justify-content', 'center');
+		cursor: default;
+		height: 100vh;
+		min-height: 35em;
+		overflow: hidden;
+		position: relative;
+		text-align: center;
 
 
-							h2 {
+		h2 {
 			// @include vendor('transform', 'scale(1)');
 			font-family: _font(family-bold);
 			@include vendor('transition', ('transform 0.5s ease', 'opacity 0.5s ease'));
@@ -1570,7 +1573,8 @@
 			// letter-spacing: 0.2em;
 			opacity: 1;
 			// padding: 0.35em 1em;
-			padding: 0.35em .35em;
+			// padding: 0.35em .35em;
+			padding: 0.35em 0;
 			position: relative;
 			z-index: 1;
 
@@ -1625,7 +1629,7 @@
 
 		.more {
 			@include vendor('transition', ('transform 0.75s ease', 'opacity 0.75s ease'));
-			@include vendor('transition-delay', '3.5s');
+			@include vendor('transition-delay', '0.5s');
 			@include vendor('transform', 'translateY(0)');
 			border: none;
 			bottom: 0;
@@ -1663,7 +1667,7 @@
 		&:after {
 			@include vendor('pointer-events', 'none');
 			@include vendor('transition', 'opacity #{_duration(fadein)} ease-in-out');
-			@include vendor('transition-delay', '1.25s');
+			@include vendor('transition-delay', '0.1s');
 			content: '';
 			background: _palette(bg);
 			display: block;
@@ -1697,7 +1701,7 @@
 	body.is-loading {
 		#banner {
 			h2 {
-				@include vendor('transform', 'scale(0.95)');
+				// @include vendor('transform', 'scale(0.95)');
 				opacity: 0;
 
 				&:before, &:after {
