--- a/sass/style.scss
+++ b/sass/style.scss
@@ -315,7 +315,7 @@ p {
 
 			h2, h3, h4, h5, h6 {
 				// font-family: _font(family-semibold);
-				background: #C3CCA9;
+				// background: #C3CCA9;
 				// border-bottom: solid 1px _palette(border);
 				display: inline-block;
 				padding: 1em;
