compass settings for minifying css

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -316,7 +316,7 @@ p {
 			h2, h3, h4, h5, h6 {
 				// font-family: _font(family-semibold);
 				// background: #C3CCA9;
-				// border-bottom: solid 1px _palette(border);
+				border-bottom: solid 6px _palette(bg);
 				display: inline-block;
 				padding: 1em;
 				position: relative;
