--- a/sass/style.scss
+++ b/sass/style.scss
@@ -318,7 +318,7 @@ p {
 				// background: #C3CCA9;
 				border-bottom: solid 6px _palette(bg);
 				display: inline-block;
-				padding: 1em;
+				padding: 1em .01em;
 				position: relative;
 
 				&:after {
@@ -1043,8 +1043,20 @@ p {
 			width: 40%;
 
 			img {
-				border-radius: 0;
+				// border-radius: 0;
 				width: 100%;
+				// height: 1em;
+				border-radius: 50%;
+				// display: block;
+				// border:1px solid white;
+			}
+			&:after {
+				content: "";
+				display: block;
+				background: radial-gradient(ellipse at center, rgba(255,255,255,0) 0%,rgba(255,255,255,1) 100%,rgba(255,255,255,1) 110%);
+				border-radius: 50%;
+				position: absolute;
+				top: 0; left: 0; right: 0; bottom: 0;
 			}
 		}
 
@@ -1377,6 +1389,7 @@ p {
 		right: 0;
 		top: 0;
 		width: 20em;
+		padding: 3em;
 		z-index: _misc(z-index-base) + 2;
 
 		ul {
