--- a/sass/_vars.scss
+++ b/sass/_vars.scss
@@ -69,10 +69,10 @@
 		),
 
 		accent2: (
-			bg:				#00ffcc,
+			bg:				#0fafae,
 			fg-bold:		#ffffff,
-			fg:				mix(#00ffcc, #ffffff, 25%),
-			fg-light:		mix(#00ffcc, #ffffff, 40%),
+			fg:				mix(#0fafae, #ffffff, 25%),
+			fg-light:		mix(#0fafae, #ffffff, 40%),
 			border:			rgba(0,0,0,0.125),
 			border-bg:		rgba(255,255,255,0.075),
 			border2:		rgba(0,0,0,0.25),
