--- a/sass/style.scss
+++ b/sass/style.scss
@@ -136,7 +136,7 @@
 
 a {
 	@include vendor('transition', ('color #{_duration(transitions)} ease', 'border-bottom-color #{_duration(transitions)} ease'));
-	border-bottom: dotted 1px;
+	border-bottom: dotted 1px _palette(accent1, fg);
 	color: inherit;
 	text-decoration: none;
 
@@ -157,7 +157,7 @@ em, i {
 
 p {
 		font-family: 'Lora', 'times new roman', serif;
-  		font-size: 20px;
+  		// font-size: 20px;
   		line-height: 1.5;
   		margin: 0 0 _size(element-margin) 0;
   	}
@@ -318,7 +318,7 @@ p {
 			h2, h3, h4, h5, h6 {
 				// font-family: _font(family-semibold);
 				// background: #C3CCA9;
-				border-bottom: solid 6px _palette(bg);
+				border-bottom: solid 2px _palette(bg);
 				display: inline-block;
 				padding: 1em .01em;
 				position: relative;
@@ -1045,17 +1045,17 @@ p {
 			width: 40%;
 
 			img {
-				// border-radius: 0;
+				border-radius: 0;
 				width: 100%;
 				// height: 1em;
-				border-radius: 50%;
+				// border-radius: 50%;
 				// display: block;
 				// border:1px solid white;
 			}
 			&:after {
 				content: "";
 				display: block;
-				background: radial-gradient(ellipse at center, rgba(255,255,255,0) 0%,rgba(255,255,255,1) 100%,rgba(255,255,255,1) 110%);
+				// background: radial-gradient(ellipse at center, rgba(255,255,255,0) 0%,rgba(255,255,255,1) 100%,rgba(255,255,255,1) 110%);
 				border-radius: 50%;
 				position: absolute;
 				top: 0; left: 0; right: 0; bottom: 0;
@@ -1283,10 +1283,11 @@ p {
 		input[type="button"],
 		button,
 		.button {
-			box-shadow: inset 0 0 0 2px _palette($p, border);
+			box-shadow: inset 0 0 0 2px _palette($p, border-fg);
 			color: _palette($p, fg-bold);
 
 			&:hover {
+				// color: _palette($p, border);
 				background-color: _palette($p, border-bg);
 			}
 
@@ -1378,20 +1379,21 @@ p {
 	}
 
 	#menu {
-		@include vendor('transform', 'translateX(20em)');
+		@include vendor('transform', 'translateX(25em)');
 		@include vendor('transition', 'transform #{_duration(menu)} ease');
 		-webkit-overflow-scrolling: touch;
-		background: _palette(accent1, bg);
-		color: _palette(accent1, fg-bold);
+		background: _palette(accent2, fg-light);
+		color: _palette(accent1, bg);
 		height: 100%;
 		max-width: 80%;
 		overflow-y: auto;
-		padding: 3em 2em;
+		padding: 3em 4em;
 		position: fixed;
 		right: 0;
 		top: 0;
-		width: 20em;
-		padding: 3em;
+		width: 25em;
+		// text-align: center;
+		// padding: 3em;
 		z-index: _misc(z-index-base) + 2;
 
 		ul {
@@ -1400,12 +1402,13 @@ p {
 
 			> li {
 				border-top: solid 1px _palette(accent2, border);
-				margin: 0.5em 0 0 0;
-				padding: 0.5em 0 0 0;
+				margin: 2em 0 0 0;
+				padding: 2em 0 0 0;
 
 				&:first-child {
+					// border-bottom: solid 1px _palette(accent2, border);
 					border-top: 0 !important;
-					margin-top: 0 !important;
+					// margin-top: 0 !important;
 					padding-top: 0 !important;
 				}
 
@@ -1413,7 +1416,7 @@ p {
 					border: 0;
 					color: inherit;
 					display: block;
-					font-size: 0.8em;
+					font-size: 1.2em;
 					letter-spacing: _size(letter-spacing-alt);
 					outline: 0;
 					text-decoration: none;
@@ -1472,6 +1475,7 @@ p {
 		top: 0;
 		width: 100%;
 		z-index: _misc(z-index-base);
+		box-shadow: 0 0 0 2px _palette(border-bg);
 
 		h1 {
 			color: _palette(bg);
@@ -1480,8 +1484,9 @@ p {
 			height: inherit;
 			left: 1.25em;
 			line-height: inherit;
-			position: absolute;
+			// position: absolute;
 			top: 0;
+			left:0;
 
 			a {
 				border: 0;
@@ -1568,6 +1573,7 @@ p {
 		}
 
 		&.alt {
+			box-shadow: none;
 			background: transparent;
 			border: transparent;
 
@@ -1819,7 +1825,7 @@ p {
 	#main {
 		> header {
 			@include padding(12em, 0);
-			@include vendor('background-image', ('linear-gradient(to bottom right,rgba(0,47,75,.6),rgba(220,67,37,.6))', 'url("../images/banner.jpg")'));
+			@include vendor('background-image', ('linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5))', 'url("../images/banner.jpg")'));
 			background-attachment: fixed;
 			background-position: center center;
 			background-repeat: no-repeat;
@@ -1980,7 +1986,7 @@ p {
 
 	body.landing {
 		#page-wrapper {
-			@include vendor('background-image', ('linear-gradient(to bottom right,rgba(0,47,75,.6),rgba(220,67,37,.6))', 'url("../images/banner.jpg")'));
+			@include vendor('background-image', ('linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5))', 'url("../images/banner.jpg")'));
 			background-attachment: fixed;
 			background-position: center center;
 			background-repeat: no-repeat;
@@ -2001,7 +2007,7 @@ p {
 
 			#banner,
 			.wrapper.style4 {
-				@include vendor('background-image', ('linear-gradient(to bottom right,rgba(0,47,75,.6),rgba(220,67,37,.6))', 'url("../images/banner.jpg")'));
+				@include vendor('background-image', ('linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5))', 'url("../images/banner.jpg")'));
 				background-position: center center;
 				background-repeat: no-repeat;
 				background-size: cover;
