--- a/sass/_vars.scss
+++ b/sass/_vars.scss
@@ -1,63 +1,60 @@
-///
-///	Spectral by HTML5 UP
-///	html5up.net | @n33co
-///	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
-///
+
+///	SASS VARIABLES
 
 // Misc.
-	$misc: (
-		max-spotlights:		10,
-		max-features:		10,
-		z-index-base:		10000
+$misc: (
+	max-spotlights:		10,
+	max-features:		10,
+	z-index-base:		10000
 	);
 
 // Breakpoints.
-	$breakpoints: (
-		xlarge:				'(max-width: 1680px)',
-		large:				'(max-width: 1280px)',
-		medium:				'(max-width: 980px)',
-		small:				'(max-width: 736px)',
-		xsmall:				'(max-width: 480px)'
+$breakpoints: (
+	xlarge:				'(max-width: 1680px)',
+	large:				'(max-width: 1280px)',
+	medium:				'(max-width: 980px)',
+	small:				'(max-width: 736px)',
+	xsmall:				'(max-width: 480px)'
 	);
 
 // Duration.
-	$duration: (
-		transitions:		0.2s,
-		menu:				0.5s,
-		fadein:				0.1s
+$duration: (
+	transitions:		0.2s,
+	menu:				0.5s,
+	fadein:				0.1s
 	);
 
 // Size.
-	$size: (
-		element-height:		2.75em,
-		element-margin:		2em,
-		letter-spacing:		0.065em,
-		letter-spacing-alt:	0.25em
+$size: (
+	element-height:		2.75em,
+	element-margin:		2em,
+	letter-spacing:		0.065em,
+	letter-spacing-alt:	0.2em
 	);
 
 // Font.
-	$font: (
-		family:				("Proxima Nova", Helvetica, Arial),
-		family-bold:        ("Proxima Nova Bold", Helvetica, Arial),
-		family-semibold:    ("Proxima Nova Semibold", Helvetica, Arial),
-		family-fixed:		('Courier New', monospace),
-		weight:				400,
-		weight-bold:		700,
-		weight-extrabold:	800
+$font: (
+	family:				("Proxima Nova", Helvetica, Arial),
+	family-bold:        ("Proxima Nova Bold", Helvetica, Arial),
+	family-semibold:    ("Proxima Nova Semibold", Helvetica, Arial),
+	family-fixed:		('Courier New', monospace),
+	weight:				400,
+	weight-bold:		700,
+	weight-extrabold:	800
 	);
 
 // Palette.
-	$palette: (
-		bg:					#212121,
-		fg:					#fff,
-		fg-bold:			#fff,
-		fg-light:			rgba(255,255,255,0.5),
-		border:				#fff,
-		border-bg:			rgba(144,144,144,0.25),
-		border2:			#fff,
-		border2-bg:			rgba(144,144,144,0.5),
+$palette: (
+	bg:					#212121,
+	fg:					#fff,
+	fg-bold:			#fff,
+	fg-light:			rgba(255,255,255,0.5),
+	border:				#fff,
+	border-bg:			rgba(144,144,144,0.25),
+	border2:			#fff,
+	border2-bg:			rgba(144,144,144,0.5),
 
-		accent1: (
+	accent1: (
 			bg:				#ffffff,//#21b2a6,
 			fg-bold:		#212121,//#ffffff,
 			fg:				mix(#000, #ffffff, 25%),
@@ -65,72 +62,72 @@
 			border:			rgba(0,0,0,0.125),
 			border-bg:		rgba(255,255,255,0.075),
 			border2:		rgba(0,0,0,0.25),
-			border2-bg:		rgba(255,255,255,0.2)
+			border2-bg:		rgba(0,0,0,0.015)
+			),
+
+	accent2: (
+		bg:				#0fafae,
+		fg-bold:		#ffffff,
+		fg:				mix(#0fafae, #ffffff, 25%),
+		fg-light:		mix(#0fafae, #ffffff, 40%),
+		border:			rgba(0,0,0,0.125),
+		border-bg:		rgba(255,255,255,0.075),
+		border2:		rgba(0,0,0,0.25),
+		border2-bg:		rgba(255,255,255,0.2)
 		),
 
-		accent2: (
-			bg:				#0fafae,
-			fg-bold:		#ffffff,
-			fg:				mix(#0fafae, #ffffff, 25%),
-			fg-light:		mix(#0fafae, #ffffff, 40%),
-			border:			rgba(0,0,0,0.125),
-			border-bg:		rgba(255,255,255,0.075),
-			border2:		rgba(0,0,0,0.25),
-			border2-bg:		rgba(255,255,255,0.2)
+	accent3: (
+		bg:				#00f0ff,
+		fg-bold:		#ffffff,
+		fg:				mix(#00f0ff, #ffffff, 25%),
+		fg-light:		mix(#00f0ff, #ffffff, 40%),
+		border:			rgba(0,0,0,0.125),
+		border-bg:		rgba(255,255,255,0.075),
+		border2:		rgba(0,0,0,0.25),
+		border2-bg:		rgba(255,255,255,0.2)
 		),
 
-		accent3: (
-			bg:				#00f0ff,
-			fg-bold:		#ffffff,
-			fg:				mix(#00f0ff, #ffffff, 25%),
-			fg-light:		mix(#00f0ff, #ffffff, 40%),
-			border:			rgba(0,0,0,0.125),
-			border-bg:		rgba(255,255,255,0.075),
-			border2:		rgba(0,0,0,0.25),
-			border2-bg:		rgba(255,255,255,0.2)
+	accent4: (
+		bg:				#76ddff,
+		fg-bold:		#ffffff,
+		fg:				mix(#76ddff, #ffffff, 25%),
+		fg-light:		mix(#76ddff, #ffffff, 40%),
+		border:			rgba(0,0,0,0.125),
+		border-bg:		rgba(255,255,255,0.075),
+		border2:		rgba(0,0,0,0.25),
+		border2-bg:		rgba(255,255,255,0.2)
 		),
 
-		accent4: (
-			bg:				#76ddff,
-			fg-bold:		#ffffff,
-			fg:				mix(#76ddff, #ffffff, 25%),
-			fg-light:		mix(#76ddff, #ffffff, 40%),
-			border:			rgba(0,0,0,0.125),
-			border-bg:		rgba(255,255,255,0.075),
-			border2:		rgba(0,0,0,0.25),
-			border2-bg:		rgba(255,255,255,0.2)
+	accent5: (
+		bg:				#505393,
+		fg-bold:		#ffffff,
+		fg:				mix(#505393, #ffffff, 25%),
+		fg-light:		mix(#505393, #ffffff, 40%),
+		border:			rgba(0,0,0,0.125),
+		border-bg:		rgba(255,255,255,0.075),
+		border2:		rgba(0,0,0,0.25),
+		border2-bg:		rgba(255,255,255,0.2)
 		),
 
-		accent5: (
-			bg:				#505393,
-			fg-bold:		#ffffff,
-			fg:				mix(#505393, #ffffff, 25%),
-			fg-light:		mix(#505393, #ffffff, 40%),
-			border:			rgba(0,0,0,0.125),
-			border-bg:		rgba(255,255,255,0.075),
-			border2:		rgba(0,0,0,0.25),
-			border2-bg:		rgba(255,255,255,0.2)
+	accent6: (
+		bg:				#ed4933,
+		fg-bold:		#ffffff,
+		fg:				mix(#ed4933, #ffffff, 25%),
+		fg-light:		mix(#ed4933, #ffffff, 40%),
+		border:			rgba(0,0,0,0.125),
+		border-bg:		rgba(255,255,255,0.075),
+		border2:		rgba(0,0,0,0.25),
+		border2-bg:		rgba(255,255,255,0.2)
 		),
 
-		accent6: (
-			bg:				#ed4933,
-			fg-bold:		#ffffff,
-			fg:				mix(#ed4933, #ffffff, 25%),
-			fg-light:		mix(#ed4933, #ffffff, 40%),
-			border:			rgba(0,0,0,0.125),
-			border-bg:		rgba(255,255,255,0.075),
-			border2:		rgba(0,0,0,0.25),
-			border2-bg:		rgba(255,255,255,0.2)
-		),
-
-		accent7: (
-			bg:				#ffffff,
-			fg-bold:		#2E3842,
-			fg:				#4E4852,
-			fg-light:		#8E8892,
-			border:			#dfdfdf,
-			border-bg:		rgba(0,0,0,0.0375),
-			border2:		#bfbfbf,
-			border2-bg:		rgba(0,0,0,0.1)
+	accent7: (
+		bg:				#ffffff,
+		fg-bold:		#2E3842,
+		fg:				#4E4852,
+		fg-light:		#8E8892,
+		border:			#dfdfdf,
+		border-bg:		rgba(0,0,0,0.0375),
+		border2:		#bfbfbf,
+		border2-bg:		rgba(0,0,0,0.1)
 		)
 	);
