--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1427,7 +1427,7 @@
 
 	body.is-menu-visible {
 		#page-wrapper {
-			color: _palette(bg);
+			// color: _palette(bg);
 			opacity: 0.55;
 
 			&:before {
