--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1365,6 +1365,7 @@
 		overflow-y: auto;
 		padding: 1em 2em;
 		position: fixed;
+		border-left: solid 2px _palette(accent1, border2-bg);
 		right: 0;
 		top: 0;
 		width: 20em;
@@ -1377,16 +1378,15 @@
 			padding: 0;
 
 			> li {
-				border-top: solid 1px _palette(accent2, border);
 				margin: 1em 0 0 0;
 				padding: 1em 0 0 0;
 
-				&:first-child {
-					// border-bottom: solid 1px _palette(accent2, border);
-					border-top: 0 !important;
-					// margin-top: 0 !important;
-					padding-top: 0 !important;
-				}
+				// &:first-child {
+				// 	// border-bottom: solid 1px _palette(accent2, border);
+				// 	border-top: 0 !important;
+				// 	// margin-top: 0 !important;
+				// 	padding-top: 0 !important;
+				// }
 
 				> a {
 					border: 0;
@@ -1398,8 +1398,15 @@
 					text-decoration: none;
 					text-transform: uppercase;
 
+
 					@include breakpoint(small) {
 						line-height: 3em;
+					}
+					&:hover {
+						@include vendor('transform', 'translateX(1em)');
+						@include vendor('transition', '#{_duration(transitions)} ease-in-out');
+						padding: 0 1em;
+						border-left: solid 2px _palette(bg);
 					}
 				}
 			}
