--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1387,6 +1387,16 @@
 				// 	// margin-top: 0 !important;
 				// 	padding-top: 0 !important;
 				// }
+									&:hover {
+						// @include vendor('transform', 'translateX(1em)');
+						@include vendor('transition', '#{_duration(transitions)} ease-in-out');
+						// padding: 0 1em;
+						// border-left: solid 2px _palette(bg);
+
+						border-bottom: 3px solid #b4e7f8;
+						box-shadow: inset 0 -3px 0 #b4e7f8;
+						width: 25%;
+					}
 
 				> a {
 					border: 0;
@@ -1401,12 +1411,6 @@
 
 					@include breakpoint(small) {
 						line-height: 3em;
-					}
-					&:hover {
-						@include vendor('transform', 'translateX(1em)');
-						@include vendor('transition', '#{_duration(transitions)} ease-in-out');
-						padding: 0 1em;
-						border-left: solid 2px _palette(bg);
 					}
 				}
 			}
