--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1393,8 +1393,8 @@
 						// padding: 0 1em;
 						// border-left: solid 2px _palette(bg);
 
-						border-bottom: 3px solid #b4e7f8;
-						box-shadow: inset 0 -3px 0 #b4e7f8;
+						// border-bottom: 3px solid #b4e7f8;
+						box-shadow: inset 0 -7px 0 #b4e7f8;
 						width: 25%;
 					}
 
