--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1389,12 +1389,14 @@
 				// }
 									&:hover {
 						// @include vendor('transform', 'translateX(1em)');
-						@include vendor('transition', '#{_duration(transitions)} ease-in-out');
+						@include vendor('transition', 'box-shadow #{_duration(transitions)} ease-in-out');
 						// padding: 0 1em;
 						// border-left: solid 2px _palette(bg);
 
-						// border-bottom: 3px solid #b4e7f8;
-						box-shadow: inset 0 -7px 0 #b4e7f8;
+						// border-bottom: 3px solid _palette(fg);
+						box-shadow: 
+						inset 0 -15px 0 #b4e7f8,
+						inset 0 -5px 0 _palette(fg);
 						width: 25%;
 					}
 
